<resources>
    <string name="app_name">Amazoinks</string>
    <string name="amazoinks">AMAZOINKS!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="amazoinks_login">Amazoinks Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="amazoinks_sign_up">Amazoinks Sign Up</string>
    <string name="view_cart">View Cart</string>
    <string name="shop_now">Shop Now!</string>
    <string name="admin_things">Admin things</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="inventory_menu">Inventory Menu</string>
    <string name="orders_menu">Orders Menu</string>
    <string name="users_menu">Users Menu</string>
    <string name="amazoinks_admin_menu">Amazoinks Admin Menu</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="delete_a_user">Delete a User</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_user_button">Delete User</string>
    <string name="item_name_admin">Item Name</string>
    <string name="enter_a_product_name_admin">Enter a Product Name</string>
    <string name="enter_product_description_admin">Enter Product Description</string>
    <string name="price_admin">Price</string>
    <string name="enter_a_price">Enter a Price</string>
    <string name="quantity_admin">Quantity</string>
    <string name="description_admin">Description</string>
    <string name="enter_a_quantity_admin">Enter a Quantity</string>
    <string name="category_admin">Category</string>
    <string name="enter_a_category_admin">Enter a Category</string>
    <string name="add_item_to_inventory_admin">Add Item to Inventory</string>
    <string name="itemCount">TextView</string>
    <string name="choose_item">Choose item</string>
    <string name="add">+</string>
    <string name="scooby_doo_van_for_image">Scooby doo van for image</string>
    <string name="image_with_the_gang">Image with the gang</string>
    <string name="scooby_walking_around">Scooby walking around</string>
</resources>