<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:background="#d7eeff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/titleLoginTextView"
        android:text="@string/amazoinks_sign_up"
        android:textStyle="bold"
        android:textColor="#5e747f"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="56sp"
        android:layout_margin="48dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@id/titleLoginTextView"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/usernameSignupEditText"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/usernameSignupEditText"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/passwordSignupEditText"
        />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="381dp"
        android:layout_height="122dp"
        android:layout_marginTop="24dp"
        android:text="@string/create_account"
        android:textSize="36sp"
        android:background="#afcbff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignupEditText"/>

    <ImageView
        android:layout_width="204dp"
        android:layout_height="166dp"
        android:src="@drawable/scooby"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintVertical_bias="0.589"
        android:contentDescription="@string/scooby_walking_around" />

</androidx.constraintlayout.widget.ConstraintLayout>