<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="#d7eeff">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/titleLoginTextView"
        android:text="@string/amazoinks_login"
        android:gravity="center"
        android:textColor="#5e747f"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="48dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@id/titleLoginTextView"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/usernameLoginEditText"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/usernameLoginEditText"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/passwordLoginEditText"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="392dp"
        android:layout_height="108dp"
        android:layout_marginTop="24dp"
        android:background="#afcbff"
        android:text="@string/login"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="286dp"
        android:layout_height="148dp"
        android:src="@drawable/peoples"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:contentDescription="@string/image_with_the_gang" />
</androidx.constraintlayout.widget.ConstraintLayout>