<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="#D7EEFF">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="36dp"
        android:layout_marginTop="54dp"
        android:text="@string/amazoinks"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/shopNowButton"
        android:layout_width="390dp"
        android:layout_height="125dp"
        android:layout_marginTop="40dp"
        android:background="#AFCBFF"
        android:text="@string/shop_now"
        android:textSize="36sp"
        android:textColor="#0e1c36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminMenuButton" />

    <Button
        android:id="@+id/viewCartButton"
        android:layout_width="390dp"
        android:layout_height="125dp"
        android:layout_marginTop="36dp"
        android:background="#AFCBFF"
        android:text="@string/view_cart"
        android:textSize="36sp"
        android:textColor="#0e1c36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shopNowButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/adminMenuButton"
        android:layout_width="390dp"
        android:layout_height="125dp"
        android:background="#AFCBFF"
        android:text="@string/admin_menu"
        android:textColor="#0e1c36"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintVertical_bias="0.12"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>