<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminUsersActivity">

    <TextView
        android:id="@+id/usersDisplayTextView"
        android:layout_width="390dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="Hello World!"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userDeletionLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/delete_user"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersDisplayTextView" />

    <EditText
        android:id="@+id/userDeletionInputEditText"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_a_username"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/userDeletionLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/userDeletionLabelTextView" />

    <Button
        android:layout_width="390dp"
        android:layout_height="125dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userDeletionInputEditText"
        android:layout_marginTop="16dp"
        android:text="@string/delete_user_button"
        android:textSize="36sp"
        android:id="@+id/userDeletionButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>