<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopItems">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        android:id="@+id/ItemTable">

    <TableRow android:background="#00d7d7"
        android:padding="10dp">
        <TextView
            android:width="95sp"
            android:layout_height="wrap_content"
            android:text="Item"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="#aad7d7"
            android:gravity="center"
            />
        <TextView
            android:width="95sp"
            android:layout_height="wrap_content"
            android:text="Price"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="#aad7d7"
            android:gravity="center"
            />

        <TextView
            android:width="100sp"
            android:layout_height="wrap_content"
            android:background="#aad7d7"
            android:text="In Stock"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            />

    </TableRow>

    <TableRow android:background="#ddddff"
        android:padding="10dp">
        <TextView
            android:id="@+id/itemName"
            android:gravity="center"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/itemPrice"
            android:gravity="center"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/itemQuant"
            android:gravity="center"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:text="@string/item_quantity"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </TableRow>

    </TableLayout>






</androidx.constraintlayout.widget.ConstraintLayout>